--- a/index.ipynb
+++ b/index.ipynb
@@ -162,11 +162,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Area', 'City', 'Country', 'Population']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "city_values = city)\n",
+    "city_values = city_keys\n",
     "city_values # [68, 'Greenville', 'USA', 93]"
    ]
   },
