--- a/index.ipynb
+++ b/index.ipynb
@@ -162,22 +162,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Area', 'City', 'Country', 'Population']"
+       "[68, 'Greenville', 'USA', 93]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "city_values = [68, '']\n",
+    "city_values = [68, 'Greenville', 'USA', 93]\n",
     "city_values # [68, 'Greenville', 'USA', 93]"
    ]
   },
